# PhoneixClaw

./: .dockerignore  .env.coolify.example  .env.example  .gitignore  Architecture.md  DEPLOY.md  Implementation.md  Makefile  Milestones.md  PHOENIX_TRADE_BOT_EXPLAINED.html  PHOENIX_TRADE_BOT_EXPLAINED.md  PRD.md  Phase2Architecture.md  Phase2ImplementationPlan.md  Phase2PRD.md  README.md  SETUP.md  UnderstandMe.md  alembic.ini  docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_env.py  test_parsing.py
archive/: docker-compose.coolify.v1.yml  docker-compose.v1.yml
config/: settings.yaml
connectors/: discord_connector.py
data/: parser_test_cases.json
db/: models.py
docs/: DEPLOYMENT.md  FIXES.md  OLLAMA_AI_ASSIST.md  OPENCLAW_AGENT_LOGS.md  OPENCLAW_SETUP_GUIDE.md  api-reference.md  architecture-v3-print.html  architecture-v3.html  configuration-guide.md  operations-guide.md  skill-development-guide.md  user-guide.md
infra/: Dockerfile.nginx  docker-compose.production.yml  nginx.conf
k8s/: configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secrets.yaml
newdocs/: ArchitecturePlan.md  ImplementationPlan.md  Milestones.md  PRD.md
parsing/: trade_parser.py
scripts/: build_pdf.py  coolify-deploy-via-ssh.sh  credential_rotation.py  docker_migrate.py  generate-pdf.sh  init.sh  parser_benchmark.py  seed_user.py  selective-build.sh  test_backtest_e2e.py
services/: __init__.py  agent_comm  audit_writer  backtest_runner  connector_manager  execution_service.py  global_monitor  message_parser_service.py  position_monitor  reddit_ingestor  run_message_parser.py  signal_scorer  skill_sync  source_orchestrator  trade_gateway  trade_parser
shared/: dedup.py  (+6 more)
(+1172 files in other folders)
